[package]
name = "chip8"
version = "0.1.0"
authors = ["Ryan Quattlebaum <ryan.quattlebaum@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
quark = "1.1.0"
log = "0.4.8"
env_logger = "0.7.1"
minifb = "0.16.0"
