[package]
name = "chirp8"
version = "0.1.0"
description = "A CHIP-8 interpreter implementing the original spec"
authors = ["Ryan Quattlebaum <ryan.quattlebaum@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
quark = "1.1.0"
log = "0.4.8"
env_logger = "0.7.1"
rand = "0.7.3"
sdl2 = "0.34.2"
